# FPGA_Gerenciamento_energetico

./: Projeto.bat  README.md  Verifica.bat
Arquivos/: Gereciamento_energetico.lpf  Gereciamento_energetico.sv  energy_system_all_in_one.vcd  energy_test  tb_energy_system_all_in_one.sv
Projeto/: Projeto.ldf  Projeto_tcl.html  promote.xml  reportview.xml
Projeto/Projeto_tcr.dir/: pn251031003753.tcr  pn251031004538.tcr  pn251031010441.tcr  pn251031011408.tcr  pn251031132249.tcr  pn251031140704.tcr
Projeto/impl1/: .build_status  Projeto_impl1.alt  Projeto_impl1.areasrr  Projeto_impl1.bgn  Projeto_impl1.bit  Projeto_impl1.edi  Projeto_impl1.htm  Projeto_impl1.mrp  Projeto_impl1.ncd  Projeto_impl1.ngd  Projeto_impl1.ngo  Projeto_impl1.p3t  Projeto_impl1.pad  Projeto_impl1.par  Projeto_impl1.prf  Projeto_impl1.srd  Projeto_impl1.srm  Projeto_impl1.srr  Projeto_impl1.srr.db  Projeto_impl1.twr  Projeto_impl1_bgn.html  Projeto_impl1_cck.rpt  Projeto_impl1_map.asd  Projeto_impl1_map.cam  Projeto_impl1_map.hrr  Projeto_impl1_map.ncd  Projeto_impl1_mrp.html  Projeto_impl1_pad.html  Projeto_impl1_par.html  Projeto_impl1_scck.rpt  Projeto_impl1_summary.html  Projeto_impl1_synplify.html  Projeto_impl1_synplify.tcl  Projeto_impl1_twr.html  hdla_gen_hierarchy.html  message.xml  run_options.txt  scratchproject.prs  stdout.log.bak  stdout.log.bak.1  (+11 more)
picow_freertos/inc/: battery_task.h  modo_global.h  tarefa_buzzer.h  tarefa_display.h  (+3 more)
picow_freertos/src/: CMakeLists.txt  battery_task.c  main.c  tarefa_buzzer.c  tarefa_display.c  tarefa_fpga_monitor.c  tarefa_freio.c  tarefa_joystick.c
(+66 files in other folders)
